--- a/data/analysis/agreement.ipynb
+++ b/data/analysis/agreement.ipynb
@@ -2,56 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json', '../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
+      "Loading files: ['../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "Found users: {'ayush', 'anton', 'vinayak', 'vishnesh', 'kelly', 'rachel'}\n",
+      "Found users: {'rachel', 'vishnesh', 'vinayak'}\n",
       "\n",
-      "Couldn't process grammar for substitution: ['positive', '', '', '']. Assuming 'no'...\n",
-      "Couldn't process positive rating for substitution: ['positive', '', '', '']. Assuming 'somewhat'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process coreference error for deletion: ['perfect', '', 'no']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n",
       "Couldn't process coreference error for deletion: ['very bad', '', 'no']. Assuming 'no'...\n",
-      "When processing sentence: rachel - Batch 4, HIT 5 (ID 124). Caught error on: Could not process edit: {'type': 'deletion', 'id': 5, 'original_span': [(95, 98)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
+      "When processing sentence: rachel - Batch 4, HIT 5 (ID 4). Caught error on: Could not process edit: {'type': 'deletion', 'id': 5, 'original_span': [(95, 98)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
       "Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
       "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
@@ -69,7 +32,7 @@
     "from scoring import *\n",
     "\n",
     "# There's also 'tutorial' and 'preliminary' data\n",
-    "data = load_data('../annotated', preprocess=True) # batch_num=1,"
+    "data = load_data('../annotated', batch_num=4, preprocess=True) # batch_num=1,"
    ]
   },
   {
@@ -258,33 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'type': 'substitution', 'id': 1, 'original_span': [(54, 82)], 'simplified_span': [(39, 73)], 'annotation': ['same', 'negative', '', 'somewhat', 'yes']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 1, 'original_span': [(65, 82)], 'simplified_span': [(48, 73)], 'annotation': ['same', 'no', '', 'minor', 'yes']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 1, 'original_span': [(65, 82)], 'simplified_span': [(48, 73)], 'annotation': ['same', 'no', '', 'minor', 'yes']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 3, 'original_span': [(58, 82)], 'simplified_span': [(53, 73)], 'annotation': ['same', 'positive', 'minor', '', 'no']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 1, 'original_span': [(60, 79)], 'simplified_span': [(47, 66)], 'annotation': ['same', 'no', '', '', 'no']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 1, 'original_span': [(60, 79)], 'simplified_span': [(47, 66)], 'annotation': ['same', 'no', '', '', 'no']}\n",
-      "there's a problem boss\n",
-      "{'type': 'substitution', 'id': 1, 'original_span': [(58, 82)], 'simplified_span': [(44, 66)], 'annotation': ['same', 'no', '', '', 'no']}\n",
-      "there's a problem boss\n",
-      "insertion: 16 25 58\n",
-      "deletion: 43 34 21\n",
-      "substitution: 22 32 44\n",
-      "split: 15 28 56\n",
-      "reorder: 7 37 54\n",
-      "structure: 10 26 62\n"
+      "insertion: 25 41 33\n",
+      "deletion: 43 35 20\n",
+      "substitution: 30 26 42\n",
+      "split: 0 0 0\n",
+      "reorder: 22 4 73\n",
+      "structure: 19 35 44\n"
      ]
     }
    ],
