--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -2,72 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json', '../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
+      "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json', '../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'vishnesh', 'kelly', 'vinayak', 'rachel', 'ayush'}\n",
+      "Found users: {'anton', 'ayush', 'vishnesh', 'rachel', 'vinayak', 'kelly'}\n",
       "\n",
-      "Couldn't process grammar for substitution: ['positive', '', '', '']. Assuming 'no'...\n",
-      "Couldn't process positive rating for substitution: ['positive', '', '', '']. Assuming 'somewhat'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process coreference error for deletion: ['perfect', '', 'no']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n",
-      "Couldn't process coreference error for deletion: ['very bad', '', 'no']. Assuming 'no'...\n",
-      "When processing sentence: rachel - Batch 4, HIT 5 (ID 124). Caught error on: Could not process edit: {'type': 'deletion', 'id': 5, 'original_span': [(95, 98)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
-      "Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process coreference error for deletion: ['perfect', '', 'no']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n"
+      "anton - Batch 5, HIT 38 (ID 37) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 6, HIT 16 (ID 45) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 21 (ID 65) has 4 deletion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 21 (ID 65) has 4 insertion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 23 (ID 67) has 1 reorder edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 25 (ID 92) has 5 deletion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 25 (ID 92) has 2 insertion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 17 (ID 100) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "ayush - Batch 6, HIT 3 (ID 136) has 1 structure edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 2 (ID 1). Caught error on: Could not process edit: {'type': 'substitution', 'id': 4, 'original_span': [(164, 171)], 'simplified_span': [(166, 175)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 2 (ID 1). Caught error on: Could not process edit: {'type': 'substitution', 'id': 5, 'original_span': [(224, 226)], 'simplified_span': [(281, 284)], 'annotation': None}. Skipping...\n",
+      "Couldn't process positive rating for substitution: ['negative', '', 'minor', '']. Assuming 'somewhat'...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 27 (ID 26). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(49, 54)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 18 (ID 47). Caught error on: Could not process edit: {'type': 'deletion', 'id': 1, 'original_span': [(278, 282)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 18 (ID 47). Caught error on: Could not process edit: {'type': 'insertion', 'id': 4, 'original_span': None, 'simplified_span': [(383, 387)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 40 (ID 59). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(109, 112)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 31 (ID 76). Caught error on: Could not process edit: {'type': 'insertion', 'id': 0, 'original_span': None, 'simplified_span': [(75, 78)], 'annotation': None}. Skipping...\n",
+      "Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "When processing sentence: vinayak - Batch 5, HIT 10 (ID 98). Caught error on: Could not process edit: {'type': 'deletion', 'id': 1, 'original_span': [(229, 233)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
+      "Couldn't process positive rating for substitution: ['negative', '', 'somewhat', '']. Assuming 'somewhat'...\n",
+      "When processing sentence: vinayak - Batch 5, HIT 34 (ID 112). Caught error on: ''. Skipping...\n"
      ]
     }
    ],
    "source": [
     "from dataloader import *\n",
-    "data = load_data('../annotated', preprocess=True)"
+    "data = load_data('../annotated', batch_num=[5, 6], preprocess=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,20 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.0,\n",
-       " 5.272384733203716,\n",
-       " 3.990978211783558,\n",
-       " 3.990978211783558,\n",
-       " 3.276895627311937]"
+       "[7.773591301605246,\n",
+       " 2.4693095065550312,\n",
+       " 8.485523033480725,\n",
+       " 9.239242635984109,\n",
+       " 9.07563996287343]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,25 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'original': 'Plot Captain Caleb Holt (Kirk Cameron) is a firefighter in Albany, Georgia and firmly keeps the cardinal rule of all firemen, \"Never leave your partner behind\".',\n",
-       " 'simplified': 'Plot Captain Caleb Holt ( played by Kirk Cameron) is a firefighter in Albany, Georgia. || He always says, \"Never leave your partner behind \".',\n",
-       " 'sari': 55.226606843090146,\n",
-       " 'simpeval': [1.327636995498794,\n",
-       "  0.8303675392698678,\n",
-       "  0.7281287502603615,\n",
-       "  0.965788910477994],\n",
-       " 'our_score': -2.626377337281374}"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-89cc7bc3360b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0masset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msents\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'asset'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'system'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mt5\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msents\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'T5'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'system'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;31m# Take the SARI score for T5, our best generation with the 2 ASSET human references\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -260,7 +231,7 @@
     "        'our_score': our_score\n",
     "    })\n",
     "\n",
-    "# Small sample size: There's currently only 28 unique sentences\n",
+    "# Small sample size\n",
     "scores[0]"
    ]
   },
