add gpt-3 batch 2 outputs

--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('He settled in London, devoting himself chiefly to practical teaching.',\n",
-       "  'He lived in London. He was a teacher.')]"
+       "[('However, even to those who enter the prayer hall of a mosque without the intention of praying, there are still rules that apply.',\n",
+       "  'There are still rules that apply to people who enter the prayer hall of a mosque with no plans to pray.')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,10 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "filename = 'batch_2.csv'\n",
+    "batch_name = filename.split('.')[0]\n",
+    "\n",
     "# Get API key & configure OpenAI API\n",
     "with open('.SECRET') as f:\n",
     "    secret = f.read().strip()\n",
@@ -91,7 +94,7 @@
     "openai.api_key = secret\n",
     "\n",
     "# Load data\n",
-    "with open('text-simplification-new-wikipedia.csv', encoding='utf-8') as f:\n",
+    "with open(filename, encoding='utf-8') as f:\n",
     "    reader = csv.reader(f)\n",
     "    next(reader)\n",
     "    data = [row for row in reader]\n",
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +150,10 @@
      "text": [
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
+      "The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
       "\n",
       "\n",
-      "The architecture of Winchester College is a diverse set of architectural styles. It reflects the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era. There were also further extensions at the turn of the 20th century and more recently.\n"
+      "The club said that customers subdued the gunman and that it was \"devastated by the senseless attack on our community\". It also offered condolences to the victims and their families.\n"
      ]
     }
    ],
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('gpt3-output.json', 'w') as f:\n",
+    "with open(f'gpt3-output-{batch_name}.json', 'w') as f:\n",
     "    json.dump(out_cleaned, f, indent=4)"
    ]
   },
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -229,8 +232,8 @@
      "text": [
       "\n",
       "Examples: \n",
-      "Input: The spacecraft consists of two main elements: the NASA Cassini orbiter, named after the Italian-French astronomer Giovanni Domenico Cassini, and the ESA Huygens probe, named after the Dutch astronomer, mathematician and physicist Christiaan Huygens.\n",
-      "Output: The spacecraft's two main elements are the NASA Cassini orbiter, named after the Italian-French astronomer Giovanni Domenico Cassini, and the ESA Huygens probe, named after the Dutch astronomer, mathematician and physicist Christiaan Huygens.\n",
+      "Input: In April 2000, MINIX became free / open source software under a permissive free software licence, but by this time other operating systems had surpassed its capabilities, and it remained primarily an operating system for students and hobbyists.\n",
+      "Output: In April 2000, MINIX became free software but other operating systems had surpassed it and it was mainly used by students and hobbyists.\n",
       "\n",
       "\n"
      ]
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -252,25 +255,28 @@
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Examples: \n",
-      "Input: Tajikistan, Turkmenistan and Uzbekistan border Afghanistan to the north, Iran to the west, Pakistan to the south and the People's Republic of China to the east.\n",
-      "Output: Tajikistan, Turkmenistan and Uzbekistan border Afghanistan to the north. They also border Iran to the west, Pakistan to the south and the People's Republic of China to the east.\n",
+      "Input: James I appointed him a Gentleman of the Chapel Royal, where he served as an organist from at least 1615 until his death.\n",
+      "Output: He was appointed a Gentleman of the Chapel Royal by James I, and served as an organist from 1615 until his death.\n",
       "\n",
-      "Input: The two former presidents were later separately charged with mutiny and treason for their roles in the 1979 coup and the 1980 Gwangju massacre.\n",
-      "Output: The two former presidents were later charged with mutiny and treason for their roles in the 1979 coup and the 1980 Gwangju massacre.\n",
+      "Input: At four-and-a-half years old he was left to fend for himself on the streets of northern Italy for the next four years, living in various orphanages and roving through towns with groups of other homeless children.\n",
+      "Output: At four-and-a-half years old he was left to take care for himself on the streets of northern Italy for the next four years. He also lived in various orphanages and traveled  through towns with groups of other homeless children.\n",
       "\n",
-      "Input: As a result, although many mosques will not enforce violations, both men and women when attending a mosque must adhere to these guidelines.\n",
-      "Output: Many mosques will not enforce violations.  But, both men and women must follow the rules when attending a mosque.\n",
+      "Input: Following the drummers are dancers, who often play the sogo (a tiny drum that makes almost no sound) and tend to have more elaborate — even acrobatic — choreography.\n",
+      "Output: Following the drummers are dancers, who often play the sogo (a tiny drum that makes almost no sound). They tend to have more elaborate — even acrobatic — choreography.\n",
       "\n",
-      "Input: That is because real estate, businesses and other assets in the underground economies of the Third World can not be used as collateral to raise capital to finance industrial and commercial expansion.\n",
-      "Output: Real estate, businesses and other assets in Third World black market economies can't be used as collateral to raise money to finance industrial and commercial growth.\n",
+      "Input: It will then dislodge itself and sink back to the river bed in order to digest its food and wait for its next meal.\n",
+      "Output: It will then remove itself and sink back to the river bed in order to digest its food and wait for its next meal.\n",
       "\n",
-      "Input: This was absorbed into battalions being formed for XI International Brigade.\n",
-      "Output: This was put into battalions formed by Xi international brigade.\n",
+      "Input: During an interview, Edward Gorey mentioned that Bawden was one of his favorite artists, lamenting the fact that not many people remembered or knew about this fine artist.\n",
+      "Output: During an interview, Edward Gorey mentioned that Bawden was one of his favorite artists. He regretted the fact that only a few people remembered or knew about this fine artist.\n",
       "\n",
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "Input: The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
-      "Output:\n"
+      "Input: The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
+      "Output:\n",
+      "\n",
+      "\n",
+      "The club said on social media that customers subdued the gunman. They also said that the club was \"devastated by the senseless attack on our community\". Lastly, the club offered condolences to the victims and their families.\n"
      ]
     }
    ],
@@ -287,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,11 +322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('gpt3-few-shot-output.json', 'w') as f:\n",
+    "with open(f'gpt3-few-shot-output-{batch_name}.json', 'w') as f:\n",
     "    json.dump(out_cleaned, f, indent=4)"
    ]
   },
