add muss outputs

--- a/data/yao/assign_annotators_to_batches.ipynb
+++ b/data/yao/assign_annotators_to_batches.ipynb
@@ -87,12 +87,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "vinayak 12\n",
       "kelly 15\n",
-      "vinayak 15\n",
-      "vishnesh 12\n",
-      "anton 15\n",
       "rachel 16\n",
-      "ayush 17\n"
+      "ayush 17\n",
+      "vishnesh 13\n",
+      "anton 17\n"
      ]
     }
    ],
@@ -110,36 +110,36 @@
     {
      "data": {
       "text/plain": [
-       "{0: ['anton', 'vinayak', 'ayush'],\n",
-       " 1: ['rachel', 'vishnesh', 'anton'],\n",
-       " 2: ['ayush', 'vinayak', 'anton'],\n",
-       " 3: ['vishnesh', 'ayush', 'vinayak'],\n",
-       " 4: ['vinayak', 'kelly', 'anton'],\n",
+       "{0: ['vinayak', 'anton', 'ayush'],\n",
+       " 1: ['rachel', 'vinayak', 'vishnesh'],\n",
+       " 2: ['rachel', 'anton', 'vinayak'],\n",
+       " 3: ['vinayak', 'kelly', 'ayush'],\n",
+       " 4: ['anton', 'kelly', 'vishnesh'],\n",
        " 5: ['rachel', 'ayush', 'kelly'],\n",
-       " 6: ['kelly', 'vishnesh', 'ayush'],\n",
-       " 7: ['ayush', 'rachel', 'vinayak'],\n",
-       " 8: ['vinayak', 'anton', 'vishnesh'],\n",
-       " 9: ['anton', 'vishnesh', 'kelly'],\n",
-       " 10: ['anton', 'vinayak', 'rachel'],\n",
-       " 11: ['kelly', 'vishnesh', 'vinayak'],\n",
-       " 12: ['kelly', 'vinayak', 'ayush'],\n",
-       " 13: ['ayush', 'vinayak', 'rachel'],\n",
-       " 14: ['kelly', 'anton', 'vishnesh'],\n",
-       " 15: ['ayush', 'kelly', 'anton'],\n",
-       " 16: ['anton', 'vinayak', 'rachel'],\n",
+       " 6: ['ayush', 'vishnesh', 'anton'],\n",
+       " 7: ['rachel', 'vishnesh', 'ayush'],\n",
+       " 8: ['anton', 'vishnesh', 'vinayak'],\n",
+       " 9: ['kelly', 'vishnesh', 'ayush'],\n",
+       " 10: ['vinayak', 'anton', 'ayush'],\n",
+       " 11: ['vishnesh', 'vinayak', 'rachel'],\n",
+       " 12: ['kelly', 'anton', 'ayush'],\n",
+       " 13: ['rachel', 'ayush', 'kelly'],\n",
+       " 14: ['rachel', 'kelly', 'vishnesh'],\n",
+       " 15: ['anton', 'ayush', 'kelly'],\n",
+       " 16: ['vishnesh', 'anton', 'rachel'],\n",
        " 17: ['ayush', 'rachel', 'kelly'],\n",
-       " 18: ['vinayak', 'rachel', 'ayush'],\n",
-       " 19: ['vinayak', 'kelly', 'anton'],\n",
-       " 20: ['kelly', 'vinayak', 'vishnesh'],\n",
-       " 21: ['ayush', 'rachel', 'vinayak'],\n",
-       " 22: ['anton', 'ayush', 'vishnesh'],\n",
-       " 23: ['rachel', 'vishnesh', 'kelly'],\n",
-       " 24: ['kelly', 'rachel', 'vishnesh'],\n",
-       " 25: ['kelly', 'anton', 'rachel'],\n",
-       " 26: ['ayush', 'kelly', 'rachel'],\n",
+       " 18: ['ayush', 'vishnesh', 'rachel'],\n",
+       " 19: ['anton', 'kelly', 'vinayak'],\n",
+       " 20: ['kelly', 'anton', 'vinayak'],\n",
+       " 21: ['rachel', 'vishnesh', 'ayush'],\n",
+       " 22: ['ayush', 'anton', 'vishnesh'],\n",
+       " 23: ['kelly', 'rachel', 'vinayak'],\n",
+       " 24: ['anton', 'rachel', 'kelly'],\n",
+       " 25: ['vinayak', 'kelly', 'anton'],\n",
+       " 26: ['kelly', 'rachel', 'vinayak'],\n",
        " 27: ['ayush', 'anton', 'rachel'],\n",
-       " 28: ['ayush', 'anton', 'rachel'],\n",
-       " 29: ['ayush', 'vishnesh', 'rachel']}"
+       " 28: ['anton', 'ayush', 'rachel'],\n",
+       " 29: ['ayush', 'anton', 'vishnesh']}"
       ]
      },
      "execution_count": 7,
@@ -320,6 +320,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.to_csv('all-outputs-new-wiki-1-before-splitting.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# reformat output with reformat_output function\n",
     "for index, row in df.iterrows():\n",
     "    df.loc[index, 'Human 1 Writing'] = reformat_output(row['Human 1 Writing'], row['Original Sentence'])\n",
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
