--- a/data/yao/prepare_new_wiki.ipynb
+++ b/data/yao/prepare_new_wiki.ipynb
@@ -8,12 +8,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../gpt-3/text-simplification-new-wikipedia.csv')"
+    "# df = pd.read_csv('../gpt-3/text-simplification-new-wikipedia.csv')\n",
+    "df = pd.read_csv('text-simplification-new-wikipedia-2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prepare data for muss model\n",
     "\n",
     "# write original sentences into txt file line by line\n",
-    "with open('new_wiki_original_sentences_1.txt', 'w') as f:\n",
+    "with open('new_wiki_original_sentences_2.txt', 'w') as f:\n",
     "    f.write('\\n'.join(original_sentences))\n"
    ]
   },
