--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('However, even to those who enter the prayer hall of a mosque without the intention of praying, there are still rules that apply.',\n",
-       "  'There are still rules that apply to people who enter the prayer hall of a mosque with no plans to pray.')]"
+       "[('Many species had vanished by the end of the nineteenth century, with European settlement.',\n",
+       "  'The Europeans pushed many animals off of the land.')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'batch_2.csv'\n",
+    "filename = 'batch-1.csv'\n",
     "batch_name = filename.split('.')[0]\n",
     "\n",
     "# Get API key & configure OpenAI API\n",
@@ -105,13 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def callGPT(prompt):\n",
     "    response = openai.Completion.create(\n",
-    "        engine=\"text-davinci-002\", \n",
+    "        engine=\"text-davinci-003\", \n",
     "        prompt=prompt, \n",
     "        temperature=1,\n",
     "        top_p=0.96,\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -150,10 +150,10 @@
      "text": [
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
+      "The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
       "\n",
       "\n",
-      "The club said that customers subdued the gunman and that it was \"devastated by the senseless attack on our community\". It also offered condolences to the victims and their families.\n"
+      "Winchester College was established in 1382, and since then its architecture has been composed of a variety of styles, reflecting its expansion in the medieval, Early Modern and Victorian eras, as well as several more recent extensions.\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,8 @@
      "text": [
       "\n",
       "Examples: \n",
-      "Input: In April 2000, MINIX became free / open source software under a permissive free software licence, but by this time other operating systems had surpassed its capabilities, and it remained primarily an operating system for students and hobbyists.\n",
-      "Output: In April 2000, MINIX became free software but other operating systems had surpassed it and it was mainly used by students and hobbyists.\n",
+      "Input: Events Europe July 29 — Battle of Stiklestad (Norway): Olav Haraldsson loses to his pagan vassals and is killed in the battle.\n",
+      "Output: Olav Haraldsson lost the Battle of Stiklestad in Europe and was killed in the fight.\n",
       "\n",
       "\n"
      ]
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,28 +255,26 @@
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Examples: \n",
-      "Input: James I appointed him a Gentleman of the Chapel Royal, where he served as an organist from at least 1615 until his death.\n",
-      "Output: He was appointed a Gentleman of the Chapel Royal by James I, and served as an organist from 1615 until his death.\n",
+      "Input: Protests across the nation were suppressed.\n",
+      "Output: Protests across the nation were stopped.\n",
       "\n",
-      "Input: At four-and-a-half years old he was left to fend for himself on the streets of northern Italy for the next four years, living in various orphanages and roving through towns with groups of other homeless children.\n",
-      "Output: At four-and-a-half years old he was left to take care for himself on the streets of northern Italy for the next four years. He also lived in various orphanages and traveled  through towns with groups of other homeless children.\n",
+      "Input: His next work, Saturday, follows an especially eventful day in the life of a successful neurosurgeon.\n",
+      "Output: His next work, Saturday, follows a very eventful day in the life of a successful neurosurgeon.\n",
       "\n",
-      "Input: Following the drummers are dancers, who often play the sogo (a tiny drum that makes almost no sound) and tend to have more elaborate — even acrobatic — choreography.\n",
-      "Output: Following the drummers are dancers, who often play the sogo (a tiny drum that makes almost no sound). They tend to have more elaborate — even acrobatic — choreography.\n",
+      "Input: Since 2000, the recipient of the Kate Greenaway Medal has also been presented with the Colin Mears Award to the value of £5000.\n",
+      "Output: Whoever wins the Kate Greenway Medal also gets The Colin Mears award which is L5000.\n",
       "\n",
-      "Input: It will then dislodge itself and sink back to the river bed in order to digest its food and wait for its next meal.\n",
-      "Output: It will then remove itself and sink back to the river bed in order to digest its food and wait for its next meal.\n",
+      "Input: Mariel of Redwall is a fantasy novel by Brian Jacques, published in 1991.\n",
+      "Output: Mariel Redwall is a pretend book by Brian Jacques, made in 1991.\n",
       "\n",
-      "Input: During an interview, Edward Gorey mentioned that Bawden was one of his favorite artists, lamenting the fact that not many people remembered or knew about this fine artist.\n",
-      "Output: During an interview, Edward Gorey mentioned that Bawden was one of his favorite artists. He regretted the fact that only a few people remembered or knew about this fine artist.\n",
+      "Input: This was absorbed into battalions being formed for XI International Brigade.\n",
+      "Output: This merged into battalions for the XI International Brigade.\n",
       "\n",
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Input: The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
       "Output:\n",
-      "\n",
-      "\n",
-      "The club said on social media that customers subdued the gunman. They also said that the club was \"devastated by the senseless attack on our community\". Lastly, the club offered condolences to the victims and their families.\n"
+      " The club wrote on social media that customers tackled the gunman and they felt \"devastated by the horrible attack on our community\". They offered sympathy to the people affected and their families.\n"
      ]
     }
    ],
@@ -293,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
